<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!-- UI iniziale -->
    <LinearLayout
        android:id="@+id/introLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="24dp">

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:contentDescription="@string/logo_open_fiber"
            android:layout_marginBottom="24dp"/>

        <ImageView
            android:id="@+id/illustrationImageView"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:src="@drawable/img_1"
            android:contentDescription="@string/illustrazione_utente_con_smartphone"
            android:layout_marginBottom="24dp"/>

        <TextView
            android:id="@+id/helpTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/serve_aiuto"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/helpSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scansiona_il_codice_qr_per_avviare_la_risoluzione_del_problema"
            android:textSize="16sp"
            android:textColor="#555555"
            android:gravity="center"
            android:layout_marginBottom="32dp"/>

        <Button
            android:id="@+id/scanQrButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scansiona_codice_qr"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:backgroundTint="#D6006D"
            android:padding="12dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_button"/>
    </LinearLayout>

    <!-- Preview fotocamera, inizialmente nascosta -->
    <androidx.camera.view.PreviewView
        android:id="@+id/previewView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />
</FrameLayout>
